# NemesisBot_Rust

./: .gitattributes  .gitignore  .rustfmt.toml  CLA.md  COMMERCIAL_LICENSE.md  Cargo.toml  LICENSE  README.md  THIRDPARTY.md  build-android.bat  build.bat  build.sh  run_demo.bat  rust-toolchain.toml  setup-android.bat  setup-linux.sh
crates/nemesis-agent/: Cargo.toml
crates/nemesis-agent/src/: args_validator.rs  capture_sink.rs  chat_log.rs  checkpoint.rs  context.rs  estop.rs  executor_pipe.rs  instance.rs  lib.rs  loop.rs  loop_continuation.rs  loop_executor.rs  loop_tools.rs  loop_tools_extra_tests.rs  mcp_bridge.rs  memory.rs  message_preprocess.rs  probe.rs  registry.rs  remote_executor_tool.rs  request_logger.rs  request_logger_observer.rs  ringbuffer.rs  session.rs  tool_adapter.rs  turn_guard.rs  types.rs
crates/nemesis-agent/tests/: agent_supplemental.rs
crates/nemesis-auth/: Cargo.toml
crates/nemesis-auth/src/: lib.rs  oauth.rs  pkce.rs  store.rs  token.rs
crates/nemesis-bus/: Cargo.toml
crates/nemesis-bus/src/: lib.rs  tests.rs
crates/nemesis-channels/: Cargo.toml
crates/nemesis-channels/src/: base.rs  bluesky.rs  dingtalk.rs  discord.rs  email.rs  external.rs  feishu.rs  irc.rs  lib.rs  line.rs  maixcam.rs  manager.rs  mastodon.rs  matrix.rs  onebot.rs  qq.rs  rpc_channel.rs  signal.rs  slack.rs  telegram.rs  telegram_commands.rs  web.rs  webhook_inbound.rs  websocket.rs  whatsapp.rs
crates/nemesis-cluster/: Cargo.toml
crates/nemesis-cluster/cluster/: state.toml
crates/nemesis-cluster/src/: actions_schema.rs  cluster.rs  cluster_config.rs  cluster_log.rs  cluster_log_reader.rs  cluster_task.rs  config_loader.rs  continuation_store.rs  diagnostics.rs  lib.rs  logger.rs  network.rs  registry.rs  rpc_types.rs  task_manager.rs  task_result_store.rs  types.rs
crates/nemesis-cluster/tests/: cluster_supplemental.rs
crates/nemesis-config/: Cargo.toml
crates/nemesis-config/src/: extra_tests.rs  lib.rs  provider_resolver.rs  store.rs  tests.rs
crates/nemesis-cron/: Cargo.toml
crates/nemesis-cron/src/: lib.rs  service.rs
crates/nemesis-data/: Cargo.toml
crates/nemesis-data/src/: db.rs  lib.rs  models.rs  usage_store.rs
crates/nemesis-data/tests/: data_store_tests.rs  unit_tests.rs
crates/nemesis-desktop/: Cargo.toml
crates/nemesis-desktop/src/: child_mode.rs  icons.rs  lib.rs  systray.rs
crates/nemesis-devices/: Cargo.toml
crates/nemesis-devices/src/: events.rs  lib.rs  service.rs  source.rs
crates/nemesis-forge/: Cargo.toml  forge_registry.json
crates/nemesis-forge/src/: bridge.rs  collector.rs  config.rs  cycle_store.rs  evaluator.rs  experience_store.rs  exporter.rs  factory.rs  forge.rs  forge_tools.rs  learning_engine.rs  lib.rs  mcp_installer.rs  monitor.rs  pattern.rs  pipeline.rs  reflector.rs  reflector_llm.rs  registry.rs  report.rs  sanitizer.rs  syncer.rs  test_runner.rs  trace.rs  trace_store.rs  types.rs  validator.rs
crates/nemesis-health/: Cargo.toml
crates/nemesis-health/src/: lib.rs  server.rs
crates/nemesis-heartbeat/: Cargo.toml
crates/nemesis-heartbeat/src/: lib.rs  service.rs
crates/nemesis-http-pool/: Cargo.toml
crates/nemesis-http-pool/src/: lib.rs  pool.rs
crates/nemesis-logger/: Cargo.toml
crates/nemesis-logger/src/: format.rs  jsonl_format.rs  lib.rs  logger.rs  sse_layer.rs
crates/nemesis-mcp/: Cargo.toml
crates/nemesis-mcp/src/: adapter.rs  client.rs  http_transport.rs  lib.rs  manager.rs  server.rs  stdio_transport.rs  transport.rs  types.rs
crates/nemesis-memory/: Cargo.toml  config.enhanced_memory.json  embedding.toml  plugin-onnx.toml
crates/nemesis-memory/config/: embedding.toml
crates/nemesis-memory/src/: episodic.rs  graph.rs  lib.rs  local_store.rs  manager.rs  memory_tools.rs  retrieval.rs  store.rs  types.rs
crates/nemesis-memory/tests/: config_integration.rs  embedding_pipeline.rs  memory_e2e.rs  persistence.rs  real_plugin.rs  tool_executor.rs
crates/nemesis-migrate/: Cargo.toml
crates/nemesis-migrate/src/: config.rs  lib.rs  migrate.rs  openclaw_config.rs  workspace.rs
crates/nemesis-observer/: Cargo.toml
crates/nemesis-observer/src/: lib.rs  tests.rs
crates/nemesis-plugin/: Cargo.toml
crates/nemesis-plugin/src/: host_services.rs  lib.rs  plugin.rs  tool_wrapper.rs  wrapper.rs
crates/nemesis-providers/: Cargo.toml
crates/nemesis-providers/src/: anthropic.rs  claude_cli.rs  codex.rs  codex_cli.rs  codex_credentials.rs  cooldown.rs  error_classifier.rs  factory.rs  failover.rs  fallback_provider.rs  github_copilot.rs  http_provider.rs  lib.rs  model_ref.rs  openai_compat.rs  router.rs  tool_call_extract.rs  tool_call_repair.rs  types.rs
crates/nemesis-providers/tests/: supplementary_tests.rs
crates/nemesis-sandbox/: Cargo.toml
crates/nemesis-sandbox/src/: download.rs  elevation.rs  extract.rs  ini.rs  install.rs  kmdutil.rs  lib.rs  pending.rs  status.rs
crates/nemesis-security/: Cargo.toml
crates/nemesis-security/src/: approval.rs  audit_log.rs  auditor.rs  classifier.rs  command.rs  credential.rs  dlp.rs  guardian.rs  lib.rs  (+11 more)
crates/nemesis-session/: Cargo.toml
crates/nemesis-skills/: Cargo.toml
crates/nemesis-state/: Cargo.toml
crates/nemesis-tools/: Cargo.toml
crates/nemesis-types/: Cargo.toml
nemesisbot/: Cargo.toml  build.rs
nemesisbot/config/: IDENTITY.cluster.template.md  config.chat.default.json  config.cluster.default.json  config.default.json  config.forge.default.json  config.mcp.default.json  config.scanner.default.json  config.security.darwin.json  config.security.linux.json  config.security.other.json  config.security.readme.md  config.security.windows.json  config.skills.default.json  config.voice.default.json
nemesisbot/default/: IDENTITY.md  IDENTITY_Cluster.md  SOUL.md  USER.md
nemesisbot/src/: adapters.rs  agent_factory.rs  cluster_agent.rs  cluster_request_logger_observer.rs  cluster_service.rs  common.rs  embedded.rs  exec_worker.rs  main.rs  tests.rs
nemesisbot/tests/: executor.rs
nemesisbot/workspace/: AGENT.md  BOOT.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  MCP.md  SOUL.md  TOOLS.md  USER.md
(+1084 files in other folders)
