[package]
name = "nemesisbot"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nemesisbot"
path = "src/main.rs"

# ---------------------------------------------------------------------------
# Feature trimming — see docs/PLAN/2026-07-01_feature-trimming-and-build-configurator.md
# ---------------------------------------------------------------------------
# Channel backends are forwarded to nemesis-channels. Build a custom set with
#   cargo build -p nemesisbot --no-default-features \
#     --features "channels-web,channels-rpc,channels-telegram"
[features]
default = [
    "channels-web", "channels-webhook", "channels-rpc",
    "migrate", "devices", "desktop", "health", "heartbeat", "auth", "voice", "cluster",
    "forge", "memory", "workflow", "security",
]

# Optional subsystems (on by default = current full build; drop with --no-default-features)
migrate = ["dep:nemesis-migrate"]
devices = ["dep:nemesis-devices"]
desktop = ["dep:nemesis-desktop"]
health = ["dep:nemesis-health"]
heartbeat = ["dep:nemesis-heartbeat"]
auth = ["dep:nemesis-auth"]
voice = ["dep:nemesis-voice", "nemesis-web/voice"]
cluster = ["dep:nemesis-cluster", "nemesis-web/cluster"]
forge = ["dep:nemesis-forge", "nemesis-agent/forge", "nemesis-web/forge"]
memory = ["dep:nemesis-memory", "nemesis-agent/memory", "nemesis-web/memory"]
workflow = ["dep:nemesis-workflow", "nemesis-agent/workflow", "nemesis-web/workflow"]
security = ["dep:nemesis-security", "nemesis-security/security", "nemesis-agent/security", "nemesis-web/security"]

# Channel backends (forwarded to nemesis-channels)
channels-web = ["nemesis-channels/web"]
channels-webhook = ["nemesis-channels/webhook"]
channels-rpc = ["nemesis-channels/rpc"]
channels-discord = ["nemesis-channels/discord"]
channels-telegram = ["nemesis-channels/telegram"]
channels-slack = ["nemesis-channels/slack"]
channels-feishu = ["nemesis-channels/feishu"]
channels-dingtalk = ["nemesis-channels/dingtalk"]
channels-onebot = ["nemesis-channels/onebot"]
channels-tencent = ["nemesis-channels/tencent"]
channels-email = ["nemesis-channels/email"]
channels-matrix = ["nemesis-channels/matrix"]
channels-irc = ["nemesis-channels/irc"]
channels-signal = ["nemesis-channels/signal"]
channels-mastodon = ["nemesis-channels/mastodon"]
channels-bluesky = ["nemesis-channels/bluesky"]
channels-whatsapp = ["nemesis-channels/whatsapp"]

[dependencies]
nemesis-types = { workspace = true }
nemesis-config = { workspace = true }
nemesis-security = { workspace = true, optional = true }
tokio-util = { version = "0.7", features = ["rt"] }
nemesis-bus = { workspace = true }
nemesis-agent = { workspace = true }
nemesis-channels = { workspace = true }
nemesis-providers = { workspace = true }
nemesis-forge = { workspace = true, optional = true }
nemesis-skills = { workspace = true }
nemesis-workflow = { workspace = true, optional = true }
nemesis-memory = { workspace = true, optional = true }
nemesis-mcp = { workspace = true }
nemesis-observer = { workspace = true }
nemesis-tools = { workspace = true }
nemesis-services = { workspace = true }
nemesis-migrate = { workspace = true, optional = true }
nemesis-auth = { workspace = true, optional = true }
nemesis-cluster = { workspace = true, optional = true }
nemesis-web = { workspace = true }
nemesis-health = { workspace = true, optional = true }
nemesis-data = { workspace = true }
nemesis-heartbeat = { workspace = true, optional = true }
nemesis-cron = { workspace = true }
nemesis-state = { workspace = true }
nemesis-desktop = { workspace = true, optional = true }
nemesis-devices = { workspace = true, optional = true }
nemesis-voice = { workspace = true, optional = true }
nemesis-logger = { workspace = true }
nemesis-utils = { workspace = true }
serde_yaml = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = "5"
which = "6"
reqwest = { workspace = true }
base64 = { workspace = true }
getrandom = "0.2"
async-trait = { workspace = true }
parking_lot = { workspace = true }
rustyline = "15"
include_dir = "0.7"

[build-dependencies]
chrono = { workspace = true }
winresource = "0.1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
