[package]
name = "nemesis-channels"
version.workspace = true
edition.workspace = true

[features]
default = ["web", "webhook", "rpc"]
web = []
webhook = []
rpc = []
discord = []
telegram = []
slack = []
feishu = []
dingtalk = []
onebot = []
tencent = []
email = []
matrix = []
irc = []
signal = []
mastodon = []
bluesky = []
whatsapp = []

[dependencies]
nemesis-types = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Additional deps needed by channel implementations
reqwest = { workspace = true }
sha2 = { workspace = true }
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
rand = { workspace = true }

# WebSocket support for Discord and Slack channels
tokio-tungstenite = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
