[package]
name = "nemesis-cluster"
version.workspace = true
edition.workspace = true

[dependencies]
nemesis-types = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
toml = { workspace = true }
if-addrs = "0.13"
socket2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
