[package]
name = "nemesis-config"
version.workspace = true
edition.workspace = true

[dependencies]
nemesis-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = "6"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
