[package]
name = "nemesis-cron"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
croner = "3"

[dev-dependencies]
tempfile = "3"
