[package]
name = "nemesis-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
nemesis-types = { workspace = true }
nemesis-config = { workspace = true }
nemesis-plugin = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.26"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# DLL loading for plugin-ui
libloading = { workspace = true }

# Tray icon (desktop only — not available on Android)
[target.'cfg(not(target_os = "android"))'.dependencies]
tray-icon = "0.24"
winit = "0.30"
image = "0.25"

# GTK init (Linux only) — gtk-rs tracks initialization via internal AtomicBool,
# not the C-level gtk_initialized flag. Need gtk::rt::set_initialized() after
# calling gtk_init_check via FFI. This does NOT add new transitive deps —
# tray-icon already depends on gtk 0.18 through libappindicator.
[target.'cfg(all(not(target_os = "android"), target_os = "linux"))'.dependencies]
gtk = "0.18"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
