[package]
name = "nemesis-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
nemesis-types = { workspace = true }
nemesis-config = { workspace = true }
nemesis-plugin = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.26"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

# DLL loading for plugin-ui
libloading = { workspace = true }

# 图标加载（所有桌面平台）
[target.'cfg(not(target_os = "android"))'.dependencies]
image = "0.25"

# Windows/macOS tray (直接使用 tray-icon，不依赖 GTK)
[target.'cfg(all(not(target_os = "android"), not(target_os = "linux")))'.dependencies]
tray-icon = "0.24"
winit = "0.30"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
