[package]
name = "nemesis-logger"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
chrono = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3"
