[package]
name = "nemesis-memory"
version.workspace = true
edition.workspace = true

[dependencies]
nemesis-types = { workspace = true }
nemesis-plugin = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
libloading = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
