[package]
name = "nemesis-observer"
version.workspace = true
edition.workspace = true

[dependencies]
nemesis-types = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
