[package]
name = "nemesis-providers"
version.workspace = true
edition.workspace = true

[dependencies]
nemesis-types = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
dirs = "6"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
mockall = { workspace = true }
wiremock = "0.6"
tempfile = "3"
