[package]
name = "nemesis-sandbox"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
nemesis-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
bytes = "1"
zip = "2"

[dev-dependencies]
tempfile = "3"
