[package]
name = "nemesis-security"
version.workspace = true
license.workspace = true
edition.workspace = true

# Class C 子系统 feature（默认开 = 现状；可通过 `--no-default-features` 关闭）。
# `security` 含整个安全中间件（8 层 pipeline + auditor/middleware/injection/...）
# + 病毒扫描（scanner + clamav）。`signature`（Ed25519 签名）在本 crate 内不 gate，
# 但 nemesis-skills 的 `signer`（唯一引用者）gate 在 nemesis-skills/security 上，
# 所以关 security 时 nemesis-skills/signer 不编译 → 本 crate 无任何启用路径 → **整包真排除**（cargo tree = 0）。
# 见 docs/PLAN/2026-07-01_feature-trimming-and-build-configurator.md Phase 5。
# scanner 子 feature（security 开 + scanner 关）留作未来增强；当前 scanner 与 security 绑定。
[features]
default = ["security"]
security = ["dep:zip"]

[dependencies]
nemesis-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
url = "2"
ipnet = "2"
ed25519-dalek = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio-util = { version = "0.7", features = ["rt"] }
zip = { version = "2", optional = true }
base64 = "0.22"
walkdir = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
