[package]
name = "nemesis-session"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = "3"
