[package]
name = "nemesis-skills"
version.workspace = true
license.workspace = true
edition.workspace = true

# `security` feature gates the skill-signing module (signer.rs → nemesis-security::signature).
# Skill signing is a security-adjacent feature; when security is trimmed off, signer is
# excluded so nemesis-security is not pulled in at all. The rest of nemesis-skills
# (loader/registry/lint/installer/security_check) is always compiled.
[features]
default = ["security"]
security = ["dep:nemesis-security"]

[dependencies]
nemesis-types = { workspace = true }
nemesis-security = { workspace = true, optional = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
parking_lot = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
zip = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
wiremock = "0.6"
